--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <style>
 body {
   
-  background-image: url("okk.jpg");
+  background-image: url("confusewalla.jpg");
   background-size: cover;
 
 }
