--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 body {
   
   background-image: url("confusewalla.jpg");
-  background-size: contain;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 
 }
 </style>
