--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ body {
   
   background-image: url("confusewalla.jpg");
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: cover;
 
 }
 </style>
