--- a/index.html
+++ b/index.html
@@ -1,19 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>ML</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body {
-  
-  background-image: url("confusewalla.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
 
+:root {
+    --accent: #04da97;
+    --border-width: 6px;
+    --border-radius: 55px;
+    --font-size: 30px;
 }
+h1,p{
+  color:yellow;
+}
+body {
+    
+    background-image: url('confusewalla.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center; 
+    font-family: sans-serif;
+}
+
 </style>
 </head>
 <body>
-<h1> INTER-FACIALL @CONFUSEFUSE ></h1>
+<h1>INTER-FACIALL @CONFUSEFUSE</h1>
+<p> THIS IS A FACE OF ONE TO MANY AMUSE BY CONFUSECONFESS</p>
+
+
 </body>
+
 </html>
