--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ h1,p{
 }
 body {
     
-    background-image: url('confusewalla.jpg');
+    background-image: url('okk.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center; 
@@ -28,8 +28,8 @@ body {
 </style>
 </head>
 <body>
-<h1>INTER-FACIALL @CONFUSEFUSE</h1>
-<p> THIS IS A FACE OF ONE TO MANY AMUSE BY CONFUSECONFESS</p>
+<h1>SORRY TO ALL</h1>
+<p> NATURE IS ASSHOLE ,WHATEVER U CAN SAY </p>
 
 
 </body>
