--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ body {
 </style>
 </head>
 <body>
-<h1>SORRY TO ALL</h1>
-<p> NATURE IS ASSHOLE ,WHATEVER U CAN SAY </p>
+<h1>jfjfjkgkgkgghgjhlkhjkugyfuyfutyfugfuygfyufuyfuttufhfgfsrtedrydtufrutdrydyrdftfuyfiygyuiyhgjfghftydtftfhgfyjgfygyfgfjfutfufuf</h1>
+<p>hftufgygiugjgcvnbvfjgfyitgifvjcggvfssrydtfyjfvhgchgddyfddccftyffyfdfgchfdhdhddcfhtdtdutfdudt </p>
 
 
 </body>
