--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     --border-radius: 55px;
     --font-size: 30px;
 }
-h1,p{
-  color:yellow;
+p{
+  color:blue;
 }
 body {
     
@@ -30,7 +30,7 @@ body {
 <body>
 
     
-11+8>11+cos 90
+<p>11+8>11+cos 90<p>
 
 </body>
 
